[package]
name = "code-utils"
version = "0.1.0"
edition = "2021"
authors = ["Mycodee"]

[lib]
name = "code_utils"
path = "src/lib/lib.rs"

[dependencies]
env_logger = "0.9.0"
eyre = "0.6.8"
figment = { version = "0.10.7", features = ["json"] }
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.36"
