[package]
name = "code-utils"
version = "0.1.0"
edition = "2021"
authors = ["Mycodee"]

[lib]
name = "code_utils"
path = "src/lib/lib.rs"

[dependencies]
env_logger = "0.9.0"
evmap = "10.0.2"
eyre = "0.6.8"
figment = { version = "0.10.7", features = ["json"] }
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.144", features = ["derive"] }
sqlb = "0.0.8"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.21.0", features = ["full"] }
tracing = "0.1.36"
